--- a/pages/roboModel/roboModel-create.html
+++ b/pages/roboModel/roboModel-create.html
@@ -75,6 +75,13 @@
 			</div>
 			<div class="header-right">
 				<div class="dashboard-setting user-notification">
+					<span class="menu_lang">Language: </span>
+					<select id="selectLang">
+					  <option selected value="1">English</option>
+					  <option value="2">Vietnamese</option>
+					</select>
+				  </div>
+				<div class="dashboard-setting user-notification">
 					<div class="dropdown">
 						<input
 						type="checkbox"
@@ -100,10 +107,18 @@
 							class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list"
 						>
 							<a class="dropdown-item" href="../users/profile.html"
-								><i class="dw dw-user1"></i> Profile</a
+								><i class="dw dw-user1"></i> <span
+								class="mtext translate"
+								data-translation-key="menu_profile"
+								>Profile</span
+								></a
 							>
 							<a class="dropdown-item" onclick="logOut()" href="#"
-								><i class="dw dw-logout"></i> Log Out</a
+								><i class="dw dw-logout"></i> <span
+								class="mtext translate"
+								data-translation-key="menu_logout"
+								>Log out</span
+								></a
 							>
 						</div>
 					</div>
@@ -124,13 +139,21 @@
 						<li class="dropdown">
 						  <a href="../../pages/roboModel/roboModel.html" class="dropdown-toggle no-arrow">
 							<span class="micon bi bi-house"></span
-							><span class="mtext">My Model</span>
+							><span
+							class="mtext translate"
+							data-translation-key="menu_my_model"
+							>My Model</span
+						  >
 						  </a>
 						</li>
 						<li>
 						  <a href="../users/profile.html" class="dropdown-toggle no-arrow">
 							<span class="micon bi bi-person"></span>
-							<span class="mtext">Profile</span>
+							<span
+							class="mtext translate"
+							data-translation-key="menu_profile"
+							>Profile</span
+							>
 						  </a>
 						</li>
 					  </ul>
@@ -146,7 +169,7 @@
 						<div class="row">
 							<div class="col-md-12 col-sm-12">
 								<div class="title">
-									<h4>Create new model</h4>
+									<h4 class="translate"data-translation-key="my_model_create_model">Create new model</h4>
 								</div>
 							</div>
 						</div>
@@ -155,7 +178,7 @@
 
 						<form id="formCreateModel" class="needs-validation" novalidate>
 							<div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-label">Name model</label>
+								<label class="col-sm-12 col-md-2 col-form-labelt ranslate" data-translation-key="my_model_name">Name model</label>
 								<div class="col-sm-12 col-md-10">
 									<input
                                         name="name"
@@ -164,14 +187,14 @@
 										placeholder="Model xxx"
                                         required
 									/>
-                                    <div class="invalid-feedback">
+                                    <div class="invalid-feedback translate" data-translation-key="my_model_required">
                                         Please enter value
                                     </div>
 								</div>
                                
 							</div>
 							<div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-label">Type Name</label>
+								<label class="col-sm-12 col-md-2 col-form-label translate" data-translation-key="my_model_type">Type Name</label>
 								<div class="col-sm-12 col-md-10">
 									<input
                                         name="typeName"
@@ -180,23 +203,23 @@
 										type="text"
                                         required
 									/>
-                                    <div class="invalid-feedback">
+                                    <div class="invalid-feedback translate" data-translation-key="my_model_required">
                                         Please enter value
                                     </div>
 								</div>
 							</div>
                             <div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-label">Image</label>
+								<label class="col-sm-12 col-md-2 col-form-label translate" data-translation-key="my_model_img">Image</label>
 								<div class="dropzone" action="#" id="my-awesome-dropzone">
                                     <div class="fallback">
-                                        <input type="file" name="file"  required/>
+                                        <input type="file" name="file" required/>
                                     </div>
                                 </div>
-                                <div class="invalid-feedback invalid-file" >
+                                <div class="invalid-feedback invalid-file translate" data-translation-key="my_model_required_img" >
                                     Please upload a image
                                 </div>
 							</div>
-                            <button type="button" class="btn btn-primary mt-2" id="model_btn-create" >Save</button>
+                            <button type="button" class="btn btn-primary mt-2 translate" data-translation-key="my_model_save" id="model_btn-create" >Save</button>
                         </form>				    
 					</div>
 				</div>
