--- a/pages/roboModel/roboModel.html
+++ b/pages/roboModel/roboModel.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Info -->
     <meta charset="utf-8" />
     <title>Tieu Luan Lap Trinh Mang</title>
-		<link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico" />
     <!-- Site favicon -->
     <link
       rel="apple-touch-icon"
@@ -115,6 +115,13 @@
       </div>
       <div class="header-right">
         <div class="dashboard-setting user-notification">
+          <span class="menu_lang">Language: </span>
+          <select id="selectLang">
+            <option selected value="1">English</option>
+            <option value="2">Vietnamese</option>
+          </select>
+        </div>
+        <div class="dashboard-setting user-notification">
           <div class="dropdown">
             <input type="checkbox" class="switch-btn" id="chk_lightDark" />
           </div>
@@ -136,11 +143,19 @@
               class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list"
             >
               <a class="dropdown-item" href="../users/profile.html"
-                ><i class="dw dw-user1"></i> Profile</a
-              >
+                ><i class="dw dw-user1"></i
+                ><span
+                  class="translate"
+                  data-translation-key="menu_profile"
+                ></span
+              ></a>
               <a class="dropdown-item" onclick="logOut()" href="#"
-                ><i class="dw dw-logout"></i> Log Out</a
-              >
+                ><i class="dw dw-logout"></i
+                ><span
+                  class="translate"
+                  data-translation-key="menu_logout"
+                ></span
+              ></a>
             </div>
           </div>
         </div>
@@ -163,13 +178,21 @@
                 class="dropdown-toggle no-arrow"
               >
                 <span class="micon bi bi-house"></span
-                ><span class="mtext">My Model</span>
+                ><span
+                  class="mtext translate"
+                  data-translation-key="menu_my_model"
+                  >My Model</span
+                >
               </a>
             </li>
             <li>
               <a href="../users/profile.html" class="dropdown-toggle no-arrow">
                 <span class="micon bi bi-person"></span>
-                <span class="mtext">Profile</span>
+                <span
+                  class="mtext translate"
+                  data-translation-key="menu_profile"
+                  >Profile</span
+                >
               </a>
             </li>
           </ul>
@@ -191,7 +214,9 @@
             </div>
             <div class="row">
               <div class="col-md-6 col-sm-12">
-                  <a href="./roboModel-create.html" class="btn btn-info"
+                <a href="./roboModel-create.html" class="btn btn-info translate"
+                data-translation-key="my_model_add_model"
+
                   >Create new model</a
                 >
               </div>
@@ -199,19 +224,19 @@
                 <div class="row justify-content-end">
                   <div class="col-md-4 col-sm-8">
                     <select class="custom-select" id="selectSort">
-                      <option value="-1" selected>Sort by...</option>
-                      <option value="1">Model Name</option>
-                      <option value="2">Type Name</option>
-                      <option value="3">Create Date</option>
-                    </select>         
+                      <option value="-1" selected class="translate" data-translation-key="my_model_sort">Sort by...</option>
+                      <option value="1" class="translate" data-translation-key="my_model_name">Model Name</option>
+                      <option value="2" class="translate" data-translation-key="my_model_type">Type Name</option>
+                      <option value="3" class="translate" data-translation-key="my_model_createdDate">Create Date</option>
+                    </select>
                   </div>
-                  <div class="col-md-3 col-sm-6">                   
+                  <div class="col-md-3 col-sm-6">
                     <select class="custom-select" id="selectOrderBy">
-                      <option value="0" selected>ASC</option>
-                      <option value="1">DESC</option>
-                    </select>           
+                      <option value="0" selected class="translate" data-translation-key="my_model_asc">ASC</option>
+                      <option value="1" class="translate" data-translation-key="my_model_desc">DESC</option>
+                    </select>
                   </div>
-                </div>                                  
+                </div>
               </div>
             </div>
           </div>
@@ -243,14 +268,14 @@
       getInfoUser();
     </script>
     <script type="text/javascript">
-      setTimeout(() =>{
+      setTimeout(() => {
         var infoUser = localStorage.getItem("infoUser");
         if (infoUser != null) {
           var user = JSON.parse(infoUser);
           $(".user-name").text(user.userName);
         }
-      },1000);
-     
+      }, 1000);
+
       function logOut() {
         localStorage.removeItem("accessToken");
         localStorage.removeItem("infoUser");
