add multi language user

--- a/pages/roboModel/roboModel-edit.html
+++ b/pages/roboModel/roboModel-edit.html
@@ -251,7 +251,7 @@
         <script type="module" src="./model-edit.js"></script>
 		<script type="text/javascript">
 
-            var URL_SERVER_LOCAL  = "https://localhost:44303"
+            var URL_SERVER_LOCAL  = "https://api.tipslife.site"
             var accessToken = localStorage.getItem("accessToken");
 
             Dropzone.autoDiscover = false;
