add language key

--- a/pages/roboModel/roboModel-edit.html
+++ b/pages/roboModel/roboModel-edit.html
@@ -83,10 +83,10 @@
 			</div>
 			<div class="header-right">
 				<div class="dashboard-setting user-notification">
-					<span class="menu_lang">Language: </span>
+					<span class="menu_lang translate" data-translation-key="menu_language"></span>
 					<select id="selectLang">
-					  <option selected value="1">English</option>
-					  <option value="2">Vietnamese</option>
+					  <option selected value="1" class="translate" data-translation-key="menu_en">English</option>
+					  <option value="2" class="translate" data-translation-key="menu_vn">Vietnamese</option>
 					</select>
 				  </div>
 				<div class="dashboard-setting user-notification">
