add language key

--- a/pages/roboModel/roboModel-create.html
+++ b/pages/roboModel/roboModel-create.html
@@ -75,10 +75,10 @@
 			</div>
 			<div class="header-right">
 				<div class="dashboard-setting user-notification">
-					<span class="menu_lang">Language: </span>
+					<span class="menu_lang translate" data-translation-key="menu_language"></span>
 					<select id="selectLang">
-					  <option selected value="1">English</option>
-					  <option value="2">Vietnamese</option>
+					  <option selected value="1" class="translate" data-translation-key="menu_en">English</option>
+					  <option value="2" class="translate" data-translation-key="menu_vn">Vietnamese</option>
 					</select>
 				  </div>
 				<div class="dashboard-setting user-notification">
@@ -178,7 +178,7 @@
 
 						<form id="formCreateModel" class="needs-validation" novalidate>
 							<div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-labelt ranslate" data-translation-key="my_model_name">Name model</label>
+								<label class="col-sm-12 col-md-2 col-form-labelt translate" data-translation-key="my_model_name">Name model</label>
 								<div class="col-sm-12 col-md-10">
 									<input
                                         name="name"
