--- a/pages/products/product.html
+++ b/pages/products/product.html
@@ -31,9 +31,9 @@
                 class="icn menuicn" id="menuicn" alt="menu-icon">
         </div>
         <div class="header_setting">
-            <div class="m-3">
-                <span class="menu_lang fs16 translate" data-translation-key="menu_language"></span>
-                <select id="selectLang">
+            <div class="m-3 d-flex">
+                <span class="menu_lang fs16 translate align-self-center" data-translation-key="menu_language"></span>
+                <select id="selectLang" class="form-select-lg ml10">
                   <option selected value="1" class="fs16 translate" data-translation-key="menu_en">English</option>
                   <option value="2" class="fs16 translate" data-translation-key="menu_vn">Vietnamese</option>
                 </select>
