--- a/pages/roboModel/roboModel-create.html
+++ b/pages/roboModel/roboModel-create.html
@@ -76,7 +76,7 @@
 			<div class="header-right">
 				<div class="dashboard-setting user-notification">
 					<span class="menu_lang translate" data-translation-key="menu_language"></span>
-					<select id="selectLang">
+					<select id="selectLang" class="form-select-lg ml10">
 					  <option selected value="1" class="translate" data-translation-key="menu_en">English</option>
 					  <option value="2" class="translate" data-translation-key="menu_vn">Vietnamese</option>
 					</select>
