--- a/pages/report/highchart.html
+++ b/pages/report/highchart.html
@@ -44,13 +44,13 @@
         />
       </div>
       <div class="header_setting">
-        <div class="m-3">
-            <span class="menu_lang fs16 translate" data-translation-key="menu_language"></span>
-            <select id="selectLang">
-              <option selected value="1" class="fs16 translate" data-translation-key="menu_en">English</option>
-              <option value="2" class="fs16 translate" data-translation-key="menu_vn">Vietnamese</option>
-            </select>
-          </div>
+        <div class="m-3 d-flex">
+          <span class="menu_lang fs16 translate align-self-center" data-translation-key="menu_language"></span>
+          <select id="selectLang" class="form-select-lg ml10">
+            <option selected value="1" class="fs16 translate" data-translation-key="menu_en">English</option>
+            <option value="2" class="fs16 translate" data-translation-key="menu_vn">Vietnamese</option>
+          </select>
+        </div>
           <div>
             <div class="dropdown">
               <input type="checkbox" class="switch-btn" id="chk_lightDark" />
